Fix the high contrast

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -22,7 +22,7 @@
 
 @layer components {
   .btn {
-    @apply inline-flex items-center justify-center rounded-full border-gray-600 border bg-transparent font-medium text-center text-base text-gray-900 leading-snug transition py-3.5 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-100 hover:border-gray-700 dark:text-slate-200 dark:border-slate-400 dark:hover:bg-slate-700 dark:hover:border-slate-300 cursor-pointer;
+    @apply inline-flex items-center justify-center rounded-full border-gray-700 border bg-white font-medium text-center text-base text-gray-900 leading-snug transition py-3.5 px-6 md:px-8 ease-in duration-200 focus:ring-blue-500 focus:ring-offset-blue-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-50 hover:border-gray-800 dark:text-slate-100 dark:bg-slate-800 dark:border-slate-500 dark:hover:bg-slate-700 dark:hover:border-slate-400 cursor-pointer shadow-sm hover:shadow-md;
   }
 
   .btn-primary {
